@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Count columns used by ND_SPACE character when splitting lines. (caf)
+
 * Use target window width rather than terminal width to wrap /list -wide
   output. (caf)
 
